--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Feedback</string>
+    <string name="btn_logout_from_google">Switch Account</string>
+    <string name="btn_revoke_access">Revoke Access</string>
 
 </resources>
